add about button to layout.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
-    <p>This is the home page. It's not exciting yet...</p>
+    <p><h1>Home Page for Wikipedia API search</h1></p>
+    <p>Search for a Wikipedia summary of your topic above</p>
 {% endblock %}
