add about page extending layout.html

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
-{% block title %}Search Wikipedia{% endblock %}
+{% block title %}About{% endblock %}
 {% block content %}
-<p>Test about page</p>
+    <p><h1>About this page</h1></p>
+    <p>This is a testing page for Flask</p>
 {% endblock %}
