--- a/templates/results.html
+++ b/templates/results.html
@@ -4,6 +4,9 @@
 {% if page %}
 {#    TODO: add page title and more... #}
 
+
+    <p><h1>{{ page.title }}</h1></p>
+
   <h2>Summary </h2>
     <p>{{ page.summary }}</p>
     <p><a href="{{ page.url }}"> {{ page.title }}</a> </p>
