--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block title %}About{% endblock %}
 {% block content %}
-    <p><h1>About this page</h1></p>
-    <p>This is a testing page for Flask</p>
+    <p><h1>About</h1></p>
+    <p>This is a Flask web framework page that uses python to access the Wikipedia API</p>
 {% endblock %}
