--- a/templates/results.html
+++ b/templates/results.html
@@ -5,8 +5,9 @@
 {#    TODO: add page title and more... #}
 
 
-    <p><h1>{{ page.title }}</h1></p>
-
+    <p><h1><i>"...{{ page.title }}"</i></h1></p>
+{#    image = {{ page.images[0] }}#}
+    <img src="{{ page.images[0] }}" width = "300" height = "300">
   <h2>Summary </h2>
     <p>{{ page.summary }}</p>
     <p><a href="{{ page.url }}"> {{ page.title }}</a> </p>
